# anime-dubbing-service

./: .gitignore  AGENTS.md  README.md  build.ps1  lazy_installer.py  main.py  pyproject.toml  requirement-gpu.txt  requirement.txt  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  transcript.py
config/: stages.yaml  tts_config.yaml
convert/: mp4_wav.py  separate_audio.py  voice_separator.py
dub/: mixer.py
test/: test_build_refs.py  test_build_refs_simple.py  test_duration_adjustment.py  test_edge_tts.py  test_memory_optimization.py
tests/: test_music_dubbing.py  test_tts_engines.py
transcription/: emotion.py  whisper.py
translate/: openAi.py
tts/: F5.py  config.py  edge_tts.py  orchestrator.py  utils.py  xtts.py
types/: convert.py
utils/: __init__.py  burn_subtitles.py  logger.py  metadata.py  srt_export.py
