[project]
name = "anime-dubbing-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audio-separator[gpu]>=0.36.1",
    "ctranslate2==4.4.0",
    "edge-tts>=7.2.3",
    "f5-tts>=1.1.9",
    "ffmpeg-python>=0.2.0",
    "huggingface-hub[hf-xet]>=0.34.4",
    "openai>=1.102.0",
    "openai-whisper>=20250625",
    "pyannote-audio>=3.3.2",
    "python-dotenv>=1.1.1",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.0",
    "vocos>=0.1.0",
]
[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
