[project]
name = "anime-dubbing-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audio-separator[cpu]>=0.36.1",
    "coqui-tts>=0.27.1",
    "ctranslate2==4.4.0",
    "edge-tts>=7.2.3",
    "f5-tts>=1.1.9",
    "ffmpeg-python>=0.2.0",
    "huggingface-hub[hf-xet]>=0.34.4",
    "openai>=1.102.0",
    "openai-whisper>=20250625",
    "pyannote-audio>=3.3.2",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "silero-vad>=6.0.0",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.65.0",
    # Base installation uses CPU versions for maximum compatibility
    "transformers>=4.56.0",
    "vocos>=0.1.0",
]

[project.optional-dependencies]
gpu = [
    "audio-separator[gpu]>=0.36.1",
    # GPU extras use CUDA versions for maximum performance
]
cpu = [
    "audio-separator[cpu]>=0.36.1",
    # CPU extras ensure CPU-only versions
]

[tool.uv.sources]
# Base installation uses CPU versions for maximum compatibility
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
include = ["anime_dubbing_service*"]
